[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_s.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_texture_rect.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/gui/cost_icon_small.png" type="Texture" id=4]
[ext_resource path="res://src/gui/cost_label.gd" type="Script" id=5]

[node name="CostLabel" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 5 )
color = Color( 0.992157, 1, 0.439216, 1 )

[node name="ScaffolderTextureRect" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.992157, 1, 0.439216, 1 )
margin_left = 497.0
margin_top = 373.0
margin_right = 511.0
margin_bottom = 395.0
rect_min_size = Vector2( 14, 22 )
texture = ExtResource( 4 )
texture_scale = Vector2( 2, 2 )

[node name="ScaffolderLabel" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 515.0
margin_top = 372.0
margin_right = 527.0
margin_bottom = 395.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.992157, 1, 0.439216, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
font_size = "S"
